--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
 
 		<div id="playerController">
 			<div id="movementController">
-				<img id="leftBtn" class="Btn1" ontouchstart="LeftBtnPress();" ontouchend="LeftBtnRelese();" src="./Sprites/onscreenControls/Left.png">
-				<img id="rightBtn" class="Btn1" ontouchstart="RightBtnPress();" ontouchend="RightBtnRelese();" src="./Sprites/onscreenControls/Right.png">
+				<div id="leftBtn"  class="Btn1" ontouchstart="LeftBtnPress();" ontouchend="LeftBtnRelese();"></div>
+				<div id="rightBtn" class="Btn1" ontouchstart="RightBtnPress();" ontouchend="RightBtnRelese();"></div>
 			</div>
 			<img id="shooter" class="Btn1" ontouchstart="ShooterPress();" ontouchend="ShooterRelese();" src="./Sprites/onscreenControls/Shooter1.png" alt="Some Required files are missing">
 		</div>
