--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 				<img id="select" onclick="SelectBtnClick();" src="./Sprites/onscreenControls/Select.png">
 			</div>
 
-			<p>Devloped By Ankit <a href="https://github.com/Ankit-games/Ankit-games.github.io">Soure Code Link</a></p>
+			<p>Devloped By Ankit <a href="#">Soure Code Link</a></p>
 			
 		</div>	
 
@@ -68,8 +68,7 @@
 				<div id="leftBtn"  class="Btn1" ontouchstart="LeftBtnPress();" ontouchend="LeftBtnRelese();"></div>
 				<div id="rightBtn" class="Btn1" ontouchstart="RightBtnPress();" ontouchend="RightBtnRelese();"></div>
 			</div>
-			<img id="shooter" class="Btn1" ontouchstart="ShooterPress();" ontouchend="ShooterRelese();" src="./Sprites/onscreenControls/Shooter1.png" alt="Some Required files are missing">
+			<div id="shooter" class="Btn1" ontouchstart="ShooterPress();" ontouchend="ShooterRelese();"></div>
 		</div>
 	</body>
 </html>
-
